<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.urbanformcard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- IMAGE VIEW -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/urban_form" />

        <!-- CONTACT US KEY-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/font"
            android:textStyle="bold" />


        <!-- E-MAIL KEY  -->

        <TextView
            android:id="@+id/e-mail_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/font" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/phone_number_key"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/visit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/font"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:gravity="center"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/font" />


    </LinearLayout>
</ScrollView>